# PicoRenderer

./: CMakeLists.txt  FindPicoRenderer.cmake  LICENSE  README.md
inc/: consts.h  enums.h  error.h  error_ids.h  pico.h  platform.h  structs.h  types.h
sources/: aprx_math.c  aprx_math.h  error.c  error.h  error_ids.h  ext_math.c  framebuffer.c  framebuffer.h  helper.h  matrix4.c  matrix4.h  pico.c  pico.h  pixel.c  pixel.h  render.c  render.h  texture.h  types.h  vector2.h  vector4.h  vertex.c  vertex.h  vertexbuffer.c  vertexbuffer.h  viewport.c
src/: pico.c
src/platform/SDL2/: context.c  context.h
src/platform/linux/: context.c  context.h
src/platform/macos/: context.h  context.m
src/platform/osx/: context.c  context.h  context.m
src/platform/win32/: context.c  context.h  win32_context.h
src/rasterizer/: color.h  color_bgr.h  color_palette.c  color_palette.h  color_rgb.h  error.c  error.h  ext_math.c  ext_math.h  framebuffer.c  framebuffer.h  global_state.c  global_state.h  helper.h  image.c  image.h  indexbuffer.c  indexbuffer.h  matrix4.c  matrix4.h  pixel.c  pixel.h  raster_triangle.h  raster_vertex.h  rect.c  rect.h  render.c  render.h  state_machine.c  state_machine.h  static_config.h  texture.c  texture.h  types.h  vector2.h  vector3.c  vector3.h  vector4.h  vector_arithmetic.h  vertex.h  (+4 more)
test/: README.txt
test/SDL2/: main.c
test/linux/: main.c
test/macos/: main.m
test/media/: house_lines.pico  house_tris.pico
test/osx/: main.c  main.m
test/win32/: main.c
